--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
   "author": "Mike Francis <mikeffrancis@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "gulp": "~3.8.11",
     "browserify": "~8.1.3",
-    "gulp-sass": "~1.3.3",
-    "gulp-minify-css": "~0.4.5",
-    "gulp-uglify": "~1.1.0",
+    "gulp": "~3.8.11",
     "gulp-autoprefixer": "~2.1.0",
-    "vinyl-source-stream": "~1.0.0",
-    "gulp-connect": "~2.2.0"
+    "gulp-connect": "~2.2.0",
+    "gulp-minify-css": "~0.4.5",
+    "gulp-sass": "~1.3.3",
+    "gulp-uglify": "^1.1.0",
+    "uglify-js": "^2.4.16",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "~1.0.0"
   },
   "dependencies": {
     "jquery": "~2.1.3"
